feat: user and task service draft implementation
