# internal/users/ports/openapi_types.gen.go
@@ -1,0 +1,88 @@
+// Package ports provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
+package ports
+
+const (
+	BearerAuthScopes = "bearerAuth.Scopes"
+)
+
+// Defines values for CreateUserRequestRole.
+const (
+	CreateUserRequestRoleAdmin   CreateUserRequestRole = "admin"
+	CreateUserRequestRoleBasic   CreateUserRequestRole = "basic"
+	CreateUserRequestRoleManager CreateUserRequestRole = "manager"
+)
+
+// Defines values for UserRole.
+const (
+	UserRoleAdmin   UserRole = "admin"
+	UserRoleBasic   UserRole = "basic"
+	UserRoleManager UserRole = "manager"
+)
+
+// AuthLoginRequest defines model for AuthLoginRequest.
+type AuthLoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+// AuthLoginResponse defines model for AuthLoginResponse.
+type AuthLoginResponse struct {
+	Token string `json:"token"`
+}
+
+// CreateUserRequest defines model for CreateUserRequest.
+type CreateUserRequest struct {
+	Email    string                `json:"email"`
+	Name     string                `json:"name"`
+	Password string                `json:"password"`
+	Role     CreateUserRequestRole `json:"role"`
+}
+
+// CreateUserRequestRole defines model for CreateUserRequest.Role.
+type CreateUserRequestRole string
+
+// Error defines model for Error.
+type Error struct {
+	Message string `json:"message"`
+	Slug    string `json:"slug"`
+}
+
+// User defines model for User.
+type User struct {
+	Email    *string  `json:"email,omitempty"`
+	Id       string   `json:"id"`
+	Name     *string  `json:"name,omitempty"`
+	Password *string  `json:"password,omitempty"`
+	Role     UserRole `json:"role"`
+}
+
+// UserRole defines model for User.Role.
+type UserRole string
+
+// Users defines model for Users.
+type Users struct {
+	Users []User `json:"users"`
+}
+
+// AuthLoginJSONBody defines parameters for AuthLogin.
+type AuthLoginJSONBody = AuthLoginRequest
+
+// GetUsersParams defines parameters for GetUsers.
+type GetUsersParams struct {
+	// The number of items to skip before starting to collect the result set
+	Offset int `form:"offset" json:"offset"`
+
+	// The numbers of items to return
+	Limit int `form:"limit" json:"limit"`
+}
+
+// CreateUserJSONBody defines parameters for CreateUser.
+type CreateUserJSONBody = CreateUserRequest
+
+// AuthLoginJSONRequestBody defines body for AuthLogin for application/json ContentType.
+type AuthLoginJSONRequestBody = AuthLoginJSONBody
+
+// CreateUserJSONRequestBody defines body for CreateUser for application/json ContentType.
+type CreateUserJSONRequestBody = CreateUserJSONBody
